PyMaker/datas/object2/RawHTML/i19601/Python_DOC_referPages.adding-class-as-dict-key.txt
<div class="post-text" itemprop="text">
<p>I am able to do this:</p>
<pre><code>{'class': 'foo'}
</code></pre>
<p>But when I do this:</p>
<pre><code>dict(class='foo')
</code></pre>
<p>I get:</p>
<pre><code>File "&lt;stdin&gt;", line 1
     {'class':}
             ^
SyntaxError: invalid syntax
</code></pre>
<p>Why can't python use 'class' as a **kwarg? It can just as easily use list, int, len... as keyword arguments.</p>
</div>
<div class="post-text" itemprop="text">
<p><code>list</code>, <code>int</code>, and <code>len</code> are not keywords, they are normal identifiers. <code>class</code> is a <a href="http://docs.python.org/3/reference/lexical_analysis.html#keywords">keyword</a>.</p>
</div>
<span class="comment-copy">Your error message does not match the code.</span>
